<resources>
    <string name="app_name">Sirius</string>
    <string name="description">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the \"Ancient\", whilst defending their own.</string>
    <string name="review_ratings"><![CDATA[Review & Ratings]]></string>
    <string name="reviews_number">70M Reviews</string>
    <string name="review_1">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="name_1">Auguste Conte</string>
    <string name="year_1">February 14, 2019</string>
    <string name="name_2">Jang Marcelino</string>
    <string name="review_2">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
</resources>