<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#030A19">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_16"
            android:layout_width="0dp"
            android:layout_height="354dp"
            android:background="@drawable/image_16"
            android:scaleType = "centerCrop"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:contentDescription="game_pic"
            />

        <View
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/oval"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/oval"
            />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="@id/oval"
            app:layout_constraintTop_toTopOf="@id/oval"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="#FFFEFE"
            android:contentDescription="back"
            />

        <View
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/ovalCopy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/oval"
            />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:srcCompat="@drawable/custom_button"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="@id/ovalCopy"
            app:layout_constraintTop_toTopOf="@id/ovalCopy"
            android:background="@null"
            android:contentDescription="options"
            />

        <View
            android:id="@+id/rectangleIcon"
            android:layout_width="84dp"
            android:layout_height="84dp"
            app:layout_constraintTop_toBottomOf="@id/image_16"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rectangle_icon"
            android:layout_marginTop="-10dp"
            android:layout_marginStart="20dp"
            />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/icon"
            app:layout_constraintStart_toStartOf="@id/rectangleIcon"
            app:layout_constraintTop_toTopOf="@id/rectangleIcon"
            android:contentDescription="gameicon"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="DoTA 2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/rectangleIcon"
            app:layout_constraintTop_toBottomOf="@id/image_16"
            android:layout_marginTop="16dp"
            android:layout_marginStart="14dp"
            />

        <RatingBar
            android:id="@+id/ratingBar1"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:progressBackgroundTint="#F4D144"
            android:progressTint="#F4D144"
            android:secondaryProgressTint="#F4D144"
            android:numStars="5"
            android:rating="5.0"
            android:stepSize="0.5"
            />

        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="70M"
            android:textColor="#555555"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/ratingBar1"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:layout_marginStart="8dp"
            />

        <Button
            android:id="@+id/genreButton1"
            android:layout_width="53dp"
            android:layout_height="22dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/genre_button"
            android:gravity="center"
            android:text="MOBA"
            android:textColor="#44A9F4"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/rectangleIcon"
            app:layout_constraintTop_toBottomOf="@id/rectangleIcon"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/genreButton2"
            android:layout_width="93dp"
            android:layout_height="22dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/genre_button"
            android:gravity="center"
            android:text="MULTIPLAYER"
            android:textColor="#44A9F4"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/genreButton1"
            app:layout_constraintTop_toBottomOf="@id/rectangleIcon"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/genreButton3"
            android:layout_width="73dp"
            android:layout_height="22dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/genre_button"
            android:gravity="center"
            android:text="STRATEGY"
            android:textColor="#44A9F4"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/genreButton2"
            app:layout_constraintTop_toBottomOf="@id/rectangleIcon"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreButton1"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:gravity="start"
            android:lineHeight="19dp"
            android:text="@string/description"
            android:textColor="#B3EEF2FB"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/review_ratings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:gravity="start"
            android:text="4.9"
            android:textSize="48sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            />

        <RatingBar
            android:id="@+id/ratingBar2"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintStart_toEndOf="@id/rating"
            app:layout_constraintTop_toBottomOf="@id/review"
            android:layout_marginTop="29dp"
            android:layout_marginStart="16dp"
            android:progressBackgroundTint="#F4D144"
            android:progressTint="#F4D144"
            android:secondaryProgressTint="#F4D144"
            android:numStars="5"
            android:rating="5.0"
            android:stepSize="0.5"
            />

        <TextView
            android:id="@+id/reviews_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/ratingBar2"
            app:layout_constraintTop_toBottomOf="@id/ratingBar2"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/reviews_number"
            android:textColor="#A8ADB7"
            android:textSize="12sp"
            />

        <View
            android:id="@+id/line"
            android:layout_width="300dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/reviews_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:background="#1A1F29"
            />

        <ImageView
            android:id="@+id/man1"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintStart_toStartOf="@id/rating"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:layout_marginTop="10dp"
            android:background="@drawable/man_1"/>
        
        <TextView
            android:id="@+id/first_man"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/man1"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/name_1"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/reviewdate_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/first_man"
            app:layout_constraintTop_toBottomOf="@id/first_man"
            android:layout_marginTop="7dp"
            android:gravity="start"
            android:text="@string/year_1"
            android:textColor="#66FFFFFF"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/reviewdescr_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/man1"
            app:layout_constraintTop_toBottomOf="@id/reviewdate_1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="start"
            android:text="@string/review_1"
            android:textColor="#A8ADB7"
            android:textSize="12sp"
            android:lineHeight="20dp"
            />

        <ImageView
            android:id="@+id/man2"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintStart_toStartOf="@id/man1"
            app:layout_constraintTop_toBottomOf="@id/reviewdescr_1"
            android:layout_marginTop="14dp"
            android:background="@drawable/man_2"
            />

        <TextView
            android:id="@+id/second_man"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/man2"
            app:layout_constraintTop_toBottomOf="@id/reviewdescr_1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:text="@string/name_2"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/reviewdate_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/second_man"
            app:layout_constraintTop_toBottomOf="@id/second_man"
            android:layout_marginTop="7dp"
            android:gravity="start"
            android:text="@string/year_1"
            android:textColor="#66FFFFFF"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/reviewdescr_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/man2"
            app:layout_constraintTop_toBottomOf="@id/reviewdate_2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="start"
            android:text="@string/review_2"
            android:textColor="#A8ADB7"
            android:textSize="12sp"
            android:lineHeight="20dp"
            />

        <Button
            android:id="@+id/install_button"
            android:layout_width="327dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/install_button"
            android:gravity="center"
            android:text="Install"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewdescr_2"
            />
        *При нажатии открывается сайт Steam в браузере*
        
        <View
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/install_button"
            android:background="#030A19"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>